--- a/SpotifyPlaylistSaver/Pages/_Host.cshtml
+++ b/SpotifyPlaylistSaver/Pages/_Host.cshtml
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@model HostModel
 @namespace SpotifyPlaylistSaver.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.AspNetCore.Authentication
@@ -18,7 +19,7 @@
 </head>
 <body>
     <app>
-        <component type="typeof(App)" render-mode="ServerPrerendered" />
+        @(await Html.RenderComponentAsync<App>(RenderMode.ServerPrerendered, new { SpotifyAccessToken = Model.SpotifyAccessToken }))
     </app>
 
     <div id="blazor-error-ui">
